Fixed dist target.

--- a/ua/server/server/address_space/Makefile.in
+++ b/ua/server/server/address_space/Makefile.in
@@ -290,9 +290,11 @@ addonsinclude_HEADERS = \
 
 libaddress_space_addon_la_SOURCES = \
    src/address_space_addon.cpp \
+   src/address_space_addon.h \
    src/address_space_internal.cpp \
    src/address_space_internal.h \
-   src/address_space_module.cpp
+   src/address_space_module.cpp \
+   tests/address_space_registry_test.h
 
 libaddress_space_addon_la_CPPFLAGS = $(INCLUDES)
 libaddress_space_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
