--- a/ua/server/server/builtin_server/Makefile.in
+++ b/ua/server/server/builtin_server/Makefile.in
@@ -298,7 +298,8 @@ libbuiltin_server_addon_la_SOURCES = \
   src/builtin_server_addon.cpp \
   src/builtin_server_factory.cpp \
   src/builtin_server_impl.cpp \
-  src/builtin_server_impl.h
+  src/builtin_server_impl.h \
+  tests/builtin_server_test.h
 
 libibultin_server_addon_la_CPPFLAGS = $(INCLUDES)
 libbuiltin_server_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
