--- a/ua/server/server/exe/Makefile.in
+++ b/ua/server/server/exe/Makefile.in
@@ -293,6 +293,7 @@ opcuaserver_SOURCES = \
   src/daemon.cpp \
   src/daemon.h \
   src/server.cpp \
+  src/server.h \
   src/server_main.cpp \
   src/server_options.cpp \
   src/server_options.h
@@ -306,6 +307,19 @@ config_DATA = configs/server.config
 #upstart_DATA=configs/opcuaserver.conf
 sysvdir = $(sysconfdir)/init.d
 sysv_DATA = configs/opcuaserver
+EXTRA_DIST = \
+  configs/opcuaserver \
+  configs/server.config \
+  configs/opcuaserver.conf \
+  tests/configs/endpoints.xml \
+  tests/configs/test.xml \
+  tests/configs/test_addon.config \
+  tests/configs/test_tcp_server.xml \
+  tests/common.cpp \
+  tests/common.h \
+  tests/test_addon.cpp \
+  tests/test_addon.h
+
 TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(abs_top_builddir)/server/exe
 test_opcuaserver_SOURCES = \
   src/server.cpp \
