--- a/ua/server/common/Makefile.am
+++ b/ua/server/common/Makefile.am
@@ -17,6 +17,7 @@ clientincludedir = $(opcuaincludedir)/client
 clientinclude_HEADERS = \
   include/opc/ua/subscriptions.h \
   include/opc/ua/view.h \
+  include/opc/ua/connection_listener.h \
   include/opc/ua/computer.h \
   include/opc/ua/attributes.h \
   include/opc/ua/endpoints.h
