--- a/ua/server/server/standard_namespace/Makefile.in
+++ b/ua/server/server/standard_namespace/Makefile.in
@@ -317,6 +317,7 @@ libstandard_ns_addon_la_SOURCES = \
    src/standard_namespace_addon.cpp \
    src/standard_namespace_module.cpp
 
+EXTRA_DIST = config/standard_address_space.xml
 libstandard_ns_addon_la_CPPFLAGS = $(INCLUDES)
 libstandard_ns_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
 test_standard_address_space_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES) 
@@ -326,7 +327,8 @@ test_standard_address_space_SOURCES = \
   ../address_space/src/address_space_internal.cpp \
   src/standard_namespace.cpp \
   src/standard_namespace_addon.cpp \
-  tests/standard_namespace_ut.cpp
+  tests/standard_namespace_ut.cpp \
+  tests/standard_namespace_test.h
 
 all: all-am
 
