--- a/ua/server/server/xml_address_space_loader/Makefile.in
+++ b/ua/server/server/xml_address_space_loader/Makefile.in
@@ -25,6 +25,7 @@
 # $Date: $
 # $Revision: $
 
+
 VPATH = @srcdir@
 am__make_dryrun = \
   { \
@@ -64,7 +65,8 @@ host_triplet = @host@
 TESTS = xml_address_space_ut$(EXEEXT)
 check_PROGRAMS = $(am__EXEEXT_1)
 subdir = server/xml_address_space_loader
-DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
+DIST_COMMON = $(addonsinclude_HEADERS) $(srcdir)/Makefile.am \
+	$(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -100,7 +102,8 @@ am__uninstall_files_from_dir = { \
     || { echo " ( cd '$$dir' && rm -f" $$files ")"; \
          $(am__cd) "$$dir" && rm -f $$files; }; \
   }
-am__installdirs = "$(DESTDIR)$(libdir)"
+am__installdirs = "$(DESTDIR)$(libdir)" \
+	"$(DESTDIR)$(addonsincludedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libxml_ns_addon_la_LIBADD =
 am_libxml_ns_addon_la_OBJECTS =  \
@@ -157,6 +160,7 @@ am__can_run_installinfo = \
     n|no|NO) false;; \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
+HEADERS = $(addonsinclude_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 am__tty_colors = \
@@ -292,6 +296,11 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+opcincludedir = $(includedir)/opc
+opcuaincludedir = $(opcincludedir)/ua
+uaclientincludedir = $(opcuaincludedir)/client
+uaserverincludedir = $(opcuaincludedir)/server
+addonsincludedir = $(uaserverincludedir)/addons
 INCLUDES = \
   -Iinclude \
   -I$(top_srcdir)/common/include \
@@ -300,14 +309,26 @@ INCLUDES = \
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) -I.
 lib_LTLIBRARIES = libxml_ns_addon.la
+addonsinclude_HEADERS = \
+  include/opc/ua/server/addons/xml_ns.h
+
 libxml_ns_addon_la_SOURCES = \
   src/xml_address_space_addon.cpp \
   src/xml_address_space_loader.cpp \
   src/xml_address_space_loader.h \
-  src/xml_address_space_module.cpp
+  src/xml_address_space_module.cpp \
+  src/xml_processor.h
 
 libxml_ns_addon_la_CPPFLAGS = $(INCLUDES) -I/usr/include/libxml2 -I$(top_srcdir) 
 libxml_ns_addon_la_LDFLAGS = -lpthread -ldl -lxml2  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
+EXTRA_DIST = \
+  tests/base_node.xml \
+  tests/empty.xml \
+  tests/invalid_root.xml \
+  tests/invalid_version.xml \
+  tests/no_version.xml \
+  tests/predefined_references.xml
+
 xml_address_space_ut_SOURCES = \
   ../address_space/src/address_space_addon.cpp \
   ../address_space/src/address_space_internal.cpp \
@@ -580,6 +601,27 @@ mostlyclean-libtool:
 
 clean-libtool:
 	-rm -rf .libs _libs
+install-addonsincludeHEADERS: $(addonsinclude_HEADERS)
+	@$(NORMAL_INSTALL)
+	@list='$(addonsinclude_HEADERS)'; test -n "$(addonsincludedir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(addonsincludedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(addonsincludedir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(addonsincludedir)'"; \
+	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(addonsincludedir)" || exit $$?; \
+	done
+
+uninstall-addonsincludeHEADERS:
+	@$(NORMAL_UNINSTALL)
+	@list='$(addonsinclude_HEADERS)'; test -n "$(addonsincludedir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(addonsincludedir)'; $(am__uninstall_files_from_dir)
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -760,9 +802,9 @@ check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) $(check_PROGRAMS)
 	$(MAKE) $(AM_MAKEFLAGS) check-TESTS
 check: check-am
-all-am: Makefile $(LTLIBRARIES)
+all-am: Makefile $(LTLIBRARIES) $(HEADERS)
 installdirs:
-	for dir in "$(DESTDIR)$(libdir)"; do \
+	for dir in "$(DESTDIR)$(libdir)" "$(DESTDIR)$(addonsincludedir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -818,7 +860,7 @@ info: info-am
 
 info-am:
 
-install-data-am:
+install-data-am: install-addonsincludeHEADERS
 
 install-dvi: install-dvi-am
 
@@ -864,7 +906,7 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-libLTLIBRARIES
+uninstall-am: uninstall-addonsincludeHEADERS uninstall-libLTLIBRARIES
 
 .MAKE: check-am install-am install-strip
 
@@ -872,16 +914,17 @@ uninstall-am: uninstall-libLTLIBRARIES
 	clean-checkPROGRAMS clean-generic clean-libLTLIBRARIES \
 	clean-libtool ctags distclean distclean-compile \
 	distclean-generic distclean-libtool distclean-tags distdir dvi \
-	dvi-am html html-am info info-am install install-am \
-	install-data install-data-am install-dvi install-dvi-am \
-	install-exec install-exec-am install-html install-html-am \
-	install-info install-info-am install-libLTLIBRARIES \
-	install-man install-pdf install-pdf-am install-ps \
-	install-ps-am install-strip installcheck installcheck-am \
-	installdirs maintainer-clean maintainer-clean-generic \
-	mostlyclean mostlyclean-compile mostlyclean-generic \
-	mostlyclean-libtool pdf pdf-am ps ps-am tags uninstall \
-	uninstall-am uninstall-libLTLIBRARIES
+	dvi-am html html-am info info-am install \
+	install-addonsincludeHEADERS install-am install-data \
+	install-data-am install-dvi install-dvi-am install-exec \
+	install-exec-am install-html install-html-am install-info \
+	install-info-am install-libLTLIBRARIES install-man install-pdf \
+	install-pdf-am install-ps install-ps-am install-strip \
+	installcheck installcheck-am installdirs maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-compile \
+	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
+	tags uninstall uninstall-addonsincludeHEADERS uninstall-am \
+	uninstall-libLTLIBRARIES
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
