--- a/.gitignore
+++ b/.gitignore
@@ -42,11 +42,10 @@ ua/uaclient/opcua
 common_gtest
 
 ua/server/libuaclient_test
-ua/server/opcua
+ua/server/client/opcua
 ua/server/opcuaserver
 ua/server/test_opcua_protocol_addon
 ua/server/test_opcuaserver
 ua/server/test_tcp_server
 ua/server/test_tcp_server_addon
 ua/server/server_unittests
-
