--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@
 AC_INIT
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_SRCDIR([Makefile.am])
-AM_INIT_AUTOMAKE([opcuaserver], [0.1.1], [rykovanov.as@gmail.com])
+AM_INIT_AUTOMAKE([opcuaserver], [0.1.2], [rykovanov.as@gmail.com])
 AC_CONFIG_MACRO_DIR([m4])
 
 #################################################################
@@ -22,8 +22,7 @@ AC_CONFIG_SUBDIRS([
  libopccore
  libuamappings
  client
- server
- python])
+ server])
 
 AC_CONFIG_FILES([third-party/Makefile python/Makefile Makefile])
 
