--- a/server/exe/Makefile.in
+++ b/server/exe/Makefile.in
@@ -300,7 +300,7 @@ opcuaserver_SOURCES = \
   src/server_options.h
 
 opcuaserver_CPPFLAGS = $(INCLUDES)
-opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) -Wl,--no-undefined
+opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) -Wl,--no-undefined,-rpath -Wl,LIBDIR
 configdir = $(sysconfdir)/opcua
 config_DATA = configs/server.config
 
