All static libraries become shared. Everything installs and seems works.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,12 @@
-all:
+EXTRA_DIST = \
+  src/module.cpp \
+  tests/Makefile \
+  tests/setup.py \
+  tests/test.py \
+  tests/test_computer.cpp \
+  Makefile.am \
+  Makefile.in \
+  setup.py
 
 check:
 	$(MAKE) -C tests check
@@ -7,9 +15,13 @@ clean:
 	$(MAKE) -C tests clean
 	rm -rvf build dist
 
-dist:
+python-dist:
 	python setup.py bdist
+
+dist:
 
 distclean: clean
 	rm -rvf Makefile
 
+install: python-dist
+	python setup.py install
