Added SOAP addon.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,7 @@ SUBDIRS = \
   endpoint_services \
   services_registry \
   standard_namespace \
+  soap_protocol \
   tcp_server \
   xml_address_space_loader
 
