--- a/address_space/Makefile.in
+++ b/address_space/Makefile.in
@@ -222,8 +222,6 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 UA_MAPPING_INCLUDES = @UA_MAPPING_INCLUDES@
 UA_MAPPING_LIBS = @UA_MAPPING_LIBS@
-URI_INCLUDES = @URI_INCLUDES@
-URI_LIBS = @URI_LIBS@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -283,7 +281,7 @@ opcuaincludedir = $(opcincludedir)/ua
 uaserverincludedir = $(opcuaincludedir)/server
 addonsincludedir = $(uaserverincludedir)/addons
 configdir = $(sysconfdir)/opcua
-INCLUDES = -Iinclude -I$(top_srcdir)/services_registry/include $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
+INCLUDES = -Iinclude -I$(top_srcdir)/services_registry/include $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(top_srcdir)/tests
 lib_LTLIBRARIES = libaddress_space_addon.la
 addonsinclude_HEADERS = \
