--- a/binary_protocol/Makefile.in
+++ b/binary_protocol/Makefile.in
@@ -250,8 +250,6 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 UA_MAPPING_INCLUDES = @UA_MAPPING_INCLUDES@
 UA_MAPPING_LIBS = @UA_MAPPING_LIBS@
-URI_INCLUDES = @URI_INCLUDES@
-URI_LIBS = @URI_LIBS@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -317,7 +315,7 @@ INCLUDES = \
   -I$(top_srcdir)/endpoint_services/include \
   -I$(top_srcdir)/services_registry/include \
   -I$(top_srcdir)/tcp_server/include \
-  $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES) $(OPC_CLIENT_INCLUDES)
+  $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES) $(OPC_CLIENT_INCLUDES)
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) \
   -Itests \
@@ -335,7 +333,7 @@ libopcua_protocol_la_SOURCES = \
  src/opc_tcp_processor.h
 
 libopcua_protocol_la_CPPFLAGS = $(INCLUDES)
-libopcua_protocol_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) $(URI_LIBS)
+libopcua_protocol_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS)
 test_opcua_protocol_addon_SOURCES = \
   src/opcua_protocol_addon.cpp \
   src/opcua_protocol_addon.h \
@@ -362,7 +360,7 @@ test_opcua_protocol_addon_SOURCES = \
   ../standard_namespace/src/standard_namespace.cpp
 
 test_opcua_protocol_addon_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
-test_opcua_protocol_addon_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(OPC_CLIENT_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS)
+test_opcua_protocol_addon_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl $(UA_MAPPING_LIBS) $(OPC_CORE_LIBS) $(OPC_CLIENT_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS)
 all: all-am
 
 .SUFFIXES:
