--- a/endpoint_services/Makefile.in
+++ b/endpoint_services/Makefile.in
@@ -242,8 +242,6 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 UA_MAPPING_INCLUDES = @UA_MAPPING_INCLUDES@
 UA_MAPPING_LIBS = @UA_MAPPING_LIBS@
-URI_INCLUDES = @URI_INCLUDES@
-URI_LIBS = @URI_LIBS@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -307,7 +305,7 @@ configdir = $(sysconfdir)/opcua
 INCLUDES = \
   -Iinclude \
   -I$(top_srcdir)/services_registry/include \
-  $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
+  $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
 lib_LTLIBRARIES = libendpoints_services_addon.la
@@ -337,7 +335,7 @@ test_endpoints_registry_SOURCES = \
   ../services_registry/src/services_registry_impl.h
 
 test_endpoints_registry_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
-test_endpoints_registry_LDFLAGS = -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -Wl,-z,defs,-no-undefined
+test_endpoints_registry_LDFLAGS = -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -Wl,-z,defs,-no-undefined
 all: all-am
 
 .SUFFIXES:
