--- a/server/exe/Makefile.in
+++ b/server/exe/Makefile.in
@@ -918,10 +918,10 @@ uninstall-am: uninstall-binPROGRAMS uninstall-configDATA \
 install-data-hook:
 	install -d $(localstatedir)/log/opcua
 	chmod 744 $(sysvdir)/opcuaserver
-	update-rc.d opcuaserver defaults
+	update-rc.d opcuaserver defaults || test true
 
 uninstall-hook:
-	update-rc.d opcuaserver remove
+	update-rc.d opcuaserver remove || test true
 
 check : test_addon.so
 
