Fixed tests and check target

--- a/Makefile.in
+++ b/Makefile.in
@@ -217,6 +217,7 @@ SUBDIRS = \
           libopccore \
           libuamappings \
           client \
+          python \
           server
 
 EXTRA_DIST = third-party/gmock third-party/gtest configure.main
