--- a/python/Makefile.in
+++ b/python/Makefile.in
@@ -345,7 +345,7 @@ distclean: clean
 	rm -rvf Makefile
 
 install: python-dist
-	python setup.py install
+	python setup.py install --prefix=$(prefix)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
