--- a/exe/Makefile.in
+++ b/exe/Makefile.in
@@ -188,6 +188,8 @@ FGREP = @FGREP@
 GMOCK_INCLUDES = @GMOCK_INCLUDES@
 GMOCK_LIBS = @GMOCK_LIBS@
 GREP = @GREP@
+GSOAP_CFLAGS = @GSOAP_CFLAGS@
+GSOAP_LIBS = @GSOAP_LIBS@
 GTEST_INCLUDES = @GTEST_INCLUDES@
 GTEST_LIB = @GTEST_LIB@
 GTEST_MAIN_LIB = @GTEST_MAIN_LIB@
@@ -225,6 +227,9 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PKG_CONFIG = @PKG_CONFIG@
+PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
+PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
